apps/queen-api-postgre/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queen-api-postgres
spec:
  replicas: 2
  selector:
    matchLabels:
      app: queen-api-postgres
  template:
    metadata:
      labels:
        app: queen-api-postgres
    spec:
      containers:
        - name: queen-api-postgres
          image: inseefr/queen-back-office:glowroot-micrometer
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "6.2"
              memory: "12.2Gi"
            requests:
              cpu: "6"
              memory: "12Gi"
      tolerations:
        - key: "metallica"
          operator: "Equal"
          value: "perf"
          effect: "NoSchedule"
