apps/queen-api-postgre/service.yml
apiVersion: v1
kind: Service
metadata:
  name: queen-api-postgres
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: queen-api-postgres
